# z.ai2api_python

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  longcat_tokens.txt.example  main.py  pyproject.toml  requirements.txt  tokens.txt.example
.github/workflows/: docker.yml  sync.yml
app/: __init__.py
app/admin/: __init__.py  api.py  auth.py  routes.py
app/api/: __init__.py  anthropic.py  openai.py
app/core/: __init__.py  config.py  openai.py  response_handlers.py  zai_transformer.py
app/models/: __init__.py  request_log.py  schemas.py  token_db.py
app/providers/: __init__.py  base.py  k2think_provider.py  longcat_provider.py  provider_factory.py  zai_provider.py
app/services/: request_log_dao.py  token_dao.py
app/templates/: base.html  config.html  index.html  login.html  monitor.html  tokens.html
app/templates/components/: provider_status.html  recent_logs.html  token_list.html  token_pool.html  token_row.html  token_stats.html
app/utils/: __init__.py  fe_version.py  helpers.py  logger.py  process_manager.py  reload_config.py  signature.py  sse_parser.py  sse_tool_handler.py  token_pool.py  tool_call_handler.py  tools.py  user_agent.py
deploy/: .dockerignore  .env.docker.example  .env.example  DOCKER.md  Dockerfile  NGINX_SETUP.md  README_DOCKER.md  docker-compose.yml  nginx.conf.example
tests/: test_anonymous_mode_fix.py  test_anthropic.py  test_auth.py  test_cascade_delete.py  test_command_quote_fix.py  test_comprehensive_fix.py  test_comprehensive_tool_calls.py  test_config_management.py  test_done_phase.py  test_edit_index_fix.py  test_final_verification.py  test_function_call.py  test_json_repair.py  test_json_repair_capabilities.py  test_live_server.py  test_longcat_connection.py  test_model_comparison.py  test_multimodal_quick.py  test_multiple_tools.py  test_optimization_performance.py  test_performance_optimization.py  test_quote_issue.py  test_re.py  test_search_model.py  test_service_uniqueness.py  test_signature.py  test_simple_performance.py  test_simple_signature.py  test_sse_optimization.py  test_system_field.py  test_token_validation.py  test_tool_call.py  test_tool_call_fix.py  test_tool_handler_optimized.py  test_weather.py
